--- a/y/index.html
+++ b/y/index.html
@@ -1,15 +1,61 @@
 <!DOCTYPE html>
 <html>
-    <script src="./2048.js"></script>
+    <head>
+        <title>
+            2048
+        </title>
+        <style>
+            body{
+                text-align: center;
+            }
+            .head{
+                font-size: 25px;
+                margin: 20px;
+            }
+            .flexBox{
+                padding: 30px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+            #gameConsole{
+                font-size: 30px;
+                border: 1px solid red;
+                text-align: center;
+                background-color: grey;
+            }
+            td{
+                background-color: white;
+                width: 50px;
+                height: 50px;
+                border: 1px solid green;
+                border-radius: 5px;
+            }
+            #error{
+                color: red;
+            }
+        </style>
+    </head>
     <body>
-        <div>
-            use function move("number") to move(between 1 to 4)
+        <div class="head">
+            Saravana - 2048
         </div>
-        <div>
-            left --> 1 ; right --> 2; up --> 3; down -->4;
+        <div>user number between 1 to 4</div>
+        <P>
+            <b>1</b> to move left<br/>
+            <b>2</b> to move right<br/>
+            <b>3</b> to move up<br/>
+            <b>4</b> to move down
+        </p>
+        <span>User Input : </span><input type="text" id="userInput" onkeypress="move(event)" />
+        <div class="flexBox">
+            <table id="gameConsole">
+                <tbody id="tableBody">
+
+                </tbody>
+            </table>
         </div>
-        <div>
-            example: move(1); to move left
-        </div>
+        <div id="error"></div>
     </body>
+    <script src="./2048.js"></script>
 </html>
